...
  "continue_with_google": "Continue with Google",
  "continue_with_number": "Continue with Phone Number",
  "enter_otp": "Enter OTP",
  "enter_phone_number": "Enter phone number",
  "enter_your_registered_phone_number": "Enter your registered phone number",
  "forgot_password": "Forgot password",
  "invalid_mobile_number": "Invalid mobile number",
  "link_send_info": "A reset link has been sent to {email}. Please check your inbox and click the link to reset the password.",
  "login": "Login",
  "login_with_email": "Login with email",
  "send_otp": "Send OTP",
  "send_reset_link": "Send Reset Link",
  "sent_code_info": "We’ve sent a 6-digit code to",
  "welcome_back": "Welcome back!",
  "signup_keys": "================ SIGNUP KEYS ================",
  "@link_verify_info": {
...
  "terms_and_conditions": "Terms and Conditions",
  "user_info_not_retrieved": "User information could not be retrieved.",
  "weak": "Weak",
  "verify": "Verify",
  "verify_email_keys": "================ VERIFY EMAIL KEYS ================",
  "resend_verification_email": "Resend Verification Email",
  "verify_your_email": "Verify your email",
  "profile_keys": "================ PROFILE KEYS ================",
  "account": "Account",
  "add_a_profile_picture": "Add a profile picture",
  "personal_details": "Personal Details",
  "profile": "Profile",
  "help_and_support": "Help & Support",
  "edit": "Edit",
  "sign_out": "Sign out",
  "skip": "Skip",
  "activity": "Activity",
  "my_orders": "My Orders",
  "done": "Done",
  "community": "Community",
  "feedback_and_ratings": "Feedback & Ratings",
...
