...
    final code = _readDynamicString(e, 'code');
    final message = _readDynamicString(e, 'message');
    if (code == kAuthUserNotFoundException) {
      onError('No user found with this email.', stackTrace: stackTrace);
    } else if (code == kAuthWrongPasswordException) {
      onError(
        'The password you entered is incorrect. Please try again.',
        stackTrace: stackTrace,
      );
    } else if (code == kAuthWeakPasswordException) {
      onError('The password you entered is invalid.', stackTrace: stackTrace);
    } else if (code == kAuthTooManyRequestsException) {
      onError(
...
